# deb-rust

./: .gitignore  Cargo.toml  README.md
src/: binary.rs  lib.rs  shared.rs  test.rs
