[package]
name = "deb-rust"
version = "0.1.0"
authors = ["NotSludgeBomb <notsludgebomb@protonmail.com>"]
description = "Rust library for building and reading Deb packages"
readme = "README.md"
license = "GPL"
repository = "https://codeberg.org/notsludgebomb/deb-rust"
edition = "2021"

[lib]
doctest = false

[dependencies]
walkdir = "2.3.2"
regex = "1.7.1"
ar = "0.9.0"
tar = "0.4.38"
xz = "0.1.0"
zstd = "0.9.0"