[package]
name = "deb-rust"
version = "0.1.2"
authors = ["NotSludgeBomb <notsludgebomb@protonmail.com>"]
description = "Rust library for building and reading Deb packages"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["deb", "dpkg", "apt", "debian", "ubuntu"]
repository = "https://codeberg.org/notsludgebomb/deb-rust"
edition = "2021"

[lib]
doctest = false

[dependencies]
walkdir = "2.4.0"
regex = "1.9.5"
ar = "0.9.0"
tar = "0.4.40"
xz = "0.1.0"
zstd = "0.11.2"
md5 = "0.7.0"
chrono = "0.4.30"
